couleur et titre changé

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <header>
         <h1>Julien Irlinger</h1>
-        <h2>Graphic&Webdesigner</h2>
+        <h2>Dev full stack / Webdesigner</h2>
     </header>
     
     <div class="centerContent">
@@ -115,13 +115,13 @@
       <li data-color="linear-gradient(to top, #537895 0%, #eef6ff 100%)"  title="Profil">
         <i class="icon ion-ios-person"></i>
       </li>
-      <li data-color="linear-gradient(to top, #B3394B 0%, #eef6ff 100%)" title="Competences">
+      <li data-color="linear-gradient(to top, #F58677 0%, #eef6ff 100%)" title="Competences">
         <i class="icon ion-ios-pie"></i>
       </li>
       <li data-color="linear-gradient(to top, #579468 0%, #eef6ff 100%)" title="Formations">
         <i class="icon ion-ios-school"></i>
       </li>
-      <li data-color="linear-gradient(to top, #70a1ff 0%,  #eef6ff 100%)" title="Experiences">
+      <li data-color="linear-gradient(to top, #FFE393 0%,  #eef6ff 100%)" title="Experiences">
         <i class="icon ion-ios-download"></i>
       </li>
       <li data-color="linear-gradient(to top, #dfe4ea  0%, #eef6ff 100%)" title="Interets">
