ajout lien linkedin

--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
               <p>https://julienirlinger.myportfolio.com/</p>
               <p>https://www.behance.net/julienirli18db</p>
               <p>https://github.com/jirlinge</p>
+              <p>https://www.linkedin.com/in/julien-irlinger-60647091/</p>
+          </div>
+          <div class="iconRS">
+            <ul>
+              <li>
+                <ion-icon name="logo-github"></ion-icon>
+              </li>
+              <li>
+                <ion-icon name="logo-behance"></ion-icon>
+              </li>
+              <li>
+                <ion-icon name="logo-dribbble"></ion-icon>
+              </li>
+            </ul>
           </div>
         </div>
         <div id="competences1" class="none">
@@ -135,6 +149,7 @@
 
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
 </body>
 
