svg icon rs add

--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
           </div>
           <div class="iconRS">
             <ul>
-              <li>
-                <ion-icon name="logo-github"></ion-icon>
+              <li><a href="https://github.com/jirlinge">
+                <ion-icon id="git" name="logo-github"></ion-icon>
+              </a>
               </li>
               <li>
-                <ion-icon name="logo-behance"></ion-icon>
+                <a href="https://www.behance.net/julienirli18db">
+                <ion-icon id="behance" name="logo-behance"></ion-icon>
+                </a>
               </li>
-              <li>
-                <ion-icon name="logo-dribbble"></ion-icon>
-              </li>
+              
+              <li><a href="https://www.linkedin.com/in/julien-irlinger-60647091/"><ion-icon id="linkedin" name="logo-linkedin"></ion-icon></a></li>
+              <li><a href="https://www.instagram.com/goodlinesll/"><ion-icon id="insta" name="logo-instagram"></ion-icon></a></li>
             </ul>
           </div>
         </div>
